min-width: 0 globally caused layout issues on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -176,10 +176,6 @@
   }
 }
 
-* {
-  min-width: 0;
-}
-
 /* semi hacky way to prevent empty space in gradient while mobile
    address bar is animating out */
 body::before {
